# indexer-api

./: .env.example  .gitignore  Dockerfile  FRONTEND_SPECIFICATION.md  KNOWLEDGE_BASE_IMPLEMENTATIONS.md  README.md  alembic.ini  catalog_pipeline.py  check_job.py  check_status.py  db_quality_report.py  docker-compose.dev.yml  docker-compose.yml  get_quality_report.py  indexer.db-shm  indexer.db-wal  install.bat  pyproject.toml  reindex.py  restart_server.ps1  run.bat  run_quality_job.py  scan_results.json  test_api.py  test_dam_code.py  test_nlu.py  test_quality.py  test_types.py  trigger_quality.py
alembic/: env.py
alembic/versions/: 20260101_catalog_tables.py  20260101_quality_assessment.py
benchmarks/: __init__.py  benchmark_runner.py  run_drive_h.py
benchmarks/results/: drive_e_v1.0.0_20260101.json
frontend/: package-lock.json  package.json  port_master.json  run_dashboard.bat
frontend/scripts/: find-port.js
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/compare/: page.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/import/: page.tsx
frontend/src/app/(dashboard)/projects/: page.tsx
frontend/src/app/(dashboard)/projects/[id]/: page.tsx
frontend/src/app/(dashboard)/quality/: page.tsx
frontend/src/app/(dashboard)/search/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/components/charts/: quality-radar.tsx
frontend/src/components/comparison/: battle-view.tsx
frontend/src/components/dashboard/: Checkout.tsx  DeployPipeline.tsx  LandingPageGenerator.tsx  LaunchReadiness.tsx  LeadCapture.tsx  OutreachTemplates.tsx  ProjectInsights.tsx  RevenueTracker.tsx  TopProjects.tsx
frontend/src/components/discovery/: tech-hologram.tsx
frontend/src/components/import/: scan-form.tsx
frontend/src/components/jobs/: job-tracker.tsx
frontend/src/components/projects/: filter-panel.tsx  project-card.tsx
frontend/src/components/search/: search-bar.tsx
frontend/src/components/ui/: chart.tsx  matrix-rain.tsx
frontend/src/components/visualizations/: project-dna.tsx
frontend/src/lib/: settings-context.tsx  types.ts
frontend/src/lib/api/: api.ts  jobs.ts  projects.ts  quality.ts
frontend/src/lib/auth/: auth-context.tsx
frontend/src/lib/hooks/: use-speech-recognition.ts
src/indexer_api/: __init__.py  cli.py  main.py
src/indexer_api/api/: __init__.py  deps.py
src/indexer_api/api/routers/: __init__.py  auth.py  code.py  dam.py  health.py  indexes.py
src/indexer_api/catalog/: __init__.py  job_handlers.py  llm_routes.py  models.py  router.py  runtime.py  schemas.py  search.py
src/indexer_api/catalog/discovery/: __init__.py  roots.py
src/indexer_api/catalog/llm/: __init__.py  embeddings.py  quality.py  service.py
src/indexer_api/catalog/watcher/: __init__.py  daemon.py  debounce.py
src/indexer_api/cli/: __init__.py  catalog.py
src/indexer_api/core/: __init__.py  config.py  logging.py  security.py
src/indexer_api/db/: __init__.py  base.py  models.py
src/indexer_api/legal/: __init__.py  cookie_policy.py  data_processing_agreement.py  privacy_policy.py  refund_policy.py  routes.py  terms_of_service.py
src/indexer_api/payments/: __init__.py  email_service.py  fraud_detection.py  license_service.py  models.py  routes.py  stripe_service.py
src/indexer_api/schemas/: __init__.py  auth.py  base.py  code.py  dam.py  index.py
src/indexer_api/services/: __init__.py  auth.py  code_discovery.py  dam.py  indexer.py
src/indexer_api/workers/: __init__.py  celery_app.py  tasks.py
src/secrets_scanner/: __init__.py  __main__.py  cli.py  entropy.py  integrations.py  patterns.py  scanner.py
tests/: __init__.py  conftest.py  test_auth.py  test_indexes.py  test_security.py
